tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_module_flags_r_t.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - module
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::PATH_QUALIFIER_SELF
crate::constants::{ATTR_CFG, LIB_FILE_NAME, MAIN_FILE_NAME, MODULE_FILE_NAME, MODULE_NAME_TEST}
crate::constants::{ATTR_CFG, MODULE_NAME_TEST, PATH_QUALIFIER_CRATE, PATH_QUALIFIER_SELF, PATH_QUALIFIER_SUPER}
crate::module::analyzer::*
crate::module::path::*
crate::module::path::{GroupItem, PathPrefix, PathSuffix, TypeReference}
crate::module::resolve::*

----- stderr -----
