tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_module_flags_r_t_e.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - module
    - "-r"
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::constants::ATTR_CFG
crate::constants::LIB_FILE_NAME
crate::constants::MAIN_FILE_NAME
crate::constants::MODULE_FILE_NAME
crate::constants::MODULE_NAME_TEST
crate::constants::PATH_QUALIFIER_CRATE
crate::constants::PATH_QUALIFIER_SELF
crate::constants::PATH_QUALIFIER_SUPER
crate::module::analyzer::*
crate::module::path::*
crate::module::path::GroupItem
crate::module::path::PathPrefix
crate::module::path::PathSuffix
crate::module::path::TypeReference
crate::module::resolve::*

----- stderr -----
