tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_parser.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - parser
---
success: true
exit_code: 0
----- stdout -----
crate::reference::TypeReference

----- stderr -----
